fix: changed a line in the dockerfile to make running the app more consistent

--- a/tweet/Makefile
+++ b/tweet/Makefile
@@ -7,7 +7,7 @@ dev:
 build-dev:
 	docker build -t tweet-dev -f ./Dockerfile.dev . 
 test:
-	docker run  -v .:/app --name tweet-test --rm tweet-test
+	docker run -v .:/app -e PYTHONPATH=/app --name tweet-test --rm tweet-test
 build-test:
 	docker build -t tweet-test -f ./Dockerfile.test . 
 swagger:
