--- a/tweet/Dockerfile.test
+++ b/tweet/Dockerfile.test
@@ -11,5 +11,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the application code into the container
 COPY . .
 
+# Add the current directory to PYTHONPATH
+ENV PYTHONPATH=/app
+
 # Run the tests
 CMD ["python", "-m", "unittest", "discover", "-s", "tests"]
