--- a/.github/workflows/build-push-tweet.yml
+++ b/.github/workflows/build-push-tweet.yml
@@ -3,8 +3,10 @@ name: Build and Push Tweet Service
 on:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    paths:
+      - 'tweet/**'
+    # This ensures the workflow only runs after merges to main, not on PRs
+    types: [closed]
 
 env:
   PROJECT_ID: polytech-dijon
@@ -13,7 +15,9 @@ env:
   WORKING_DIRECTORY: ./tweet
 
 jobs:
-  build-and-test:
+  build-and-push:
+    # Only run if the push is from a merged PR
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -24,13 +28,6 @@ jobs:
           cd ${{ env.WORKING_DIRECTORY }}
           docker build -t tweet-test -f Dockerfile.test .
           docker run --rm tweet-test
-
-  build-push-artifact:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
 
       - name: Google Auth
         id: auth
