--- a/.github/workflows/tweet-test.yaml
+++ b/.github/workflows/tweet-test.yaml
@@ -13,16 +13,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
+      - name: Build and run tests in Docker
         run: |
-          python -m pip install --upgrade pip
-          pip install Flask==2.0.1 werkzeug==2.0
-
-      - name: Run tests
-        run: |
-          python -m unittest discover -s tweet/tests
+          cd tweet
+          docker build -t tweet-test -f Dockerfile.test .
+          docker run --rm tweet-test
