Correction du problème: 'No such file or directory' lors du lancement du conteneur

--- a/Authentification/Dockerfile
+++ b/Authentification/Dockerfile
@@ -7,7 +7,7 @@ COPY requirements.txt /app/
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-COPY ./src /app
+COPY ./src /app/src
 EXPOSE 5000
 
 CMD ["python", "src/main.py"]
