--- a/.github/workflows/authentification_api_gcp.yml
+++ b/.github/workflows/authentification_api_gcp.yml
@@ -1,5 +1,4 @@
 name: Build and Push to Artifact Registry
-author: Quentin DAVIN (itsax404)
 
 on:
   push:
@@ -13,20 +12,20 @@ env:
   GAR_LOCATION: europe-west1-docker.pkg.dev/polytech-dijon/polytech-dijon/authentification_service
   WORKING_DIRECTORY: ./authentification
 
-job:
+jobs:
   build-push-artifact:
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
-        uses: "actions/checkout@v3"
-
+        uses: "actions/checkout@v4"
+        
       - id: "auth"
-          uses: "google-github-actions/auth@v1"
-          with:
+        uses: "google-github-actions/auth@v2"
+        with:
             credentials_json: "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}"
 
       - name: "Set up Cloud SDK"
-        uses: "google-github-actions/setup-gcloud@v1"
+        uses: "google-github-actions/setup-gcloud@v2"
 
       - name: "Use gcloud CLI"
         run: "gcloud info"
