--- a/.github/workflows/authentification_api_gcp.yml
+++ b/.github/workflows/authentification_api_gcp.yml
@@ -35,8 +35,8 @@ jobs:
           gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
       - name: Build image
-        run: docker build . --file DOCKERFILE --tag ${{ env.GAR_LOCATION }}
-        working-directory: env.WORKING_DIRECTORY
+        run: docker build . --file Dockerfile --tag ${{ env.GAR_LOCATION }}
+        working-directory: ${{ env.WORKING_DIRECTORY }}
 
       - name: Push image
         run: docker push ${{ env.GAR_LOCATION }}
