--- a/.github/workflows/authentification_api_gcp.yml
+++ b/.github/workflows/authentification_api_gcp.yml
@@ -1,4 +1,4 @@
-name: Build and Push to Artifact Registry
+name: Build and Push to Artifact Registry for Authentification Service
 
 on:
   push:
@@ -13,7 +13,7 @@ env:
   WORKING_DIRECTORY: ./authentification
 
 jobs:
-  build-push-artifact:
+  build-push-api-artifact:
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
@@ -36,6 +36,33 @@ jobs:
 
       - name: Build image
         run: docker build . --file Dockerfile --tag ${{ env.GAR_LOCATION }}
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+
+      - name: Push image
+        run: docker push ${{ env.GAR_LOCATION }}
+  build-push-sql-artifact:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Checkout"
+        uses: "actions/checkout@v4"
+        
+      - id: "auth"
+        uses: "google-github-actions/auth@v2"
+        with:
+            credentials_json: "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}"
+
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@v2"
+
+      - name: "Use gcloud CLI"
+        run: "gcloud info"
+
+      - name: "Docker auth"
+        run: |-
+          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+
+      - name: Build image
+        run: docker build . --file ./data/Dockerfile --tag ${{ env.GAR_LOCATION }}
         working-directory: ${{ env.WORKING_DIRECTORY }}
 
       - name: Push image
