--- a/authentification/data/dockerfile
+++ b/authentification/data/dockerfile
@@ -5,7 +5,7 @@ ENV MYSQL_ROOT_PASSWORD=root
 ENV MYSQL_DATABASE=polytex
 
 # Copier le script SQL dans le conteneur
-COPY bdd.sql /docker-entrypoint-initdb.d/
+COPY ./bdd.sql /docker-entrypoint-initdb.d/
 
 # Exposer le port MySQL
 EXPOSE 3306
