--- a/authentification/src/.env.example
+++ b/authentification/src/.env.example
@@ -1,3 +1,8 @@
-JWT_SECRET_KEY = "secret-key"
-DATABASE_URL = "sqlite_db_url"
-FLASK_DEBUG = true_or_false
+DATABASE_USER="root"
+DATABASE_PASSWORD="root"
+DATABASE_IP="localhost"
+DATABASE_PORT="3306"
+DATABASE_NAME="polytex"
+
+JWT_SECRET_KEY="secret-key"
+FLASK_DEBUG=true_or_false
